Fix: Add Margins in Design

--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,10 @@ table{
   margin: 10px !important;
 }
 
+.App_Content{
+  margin: 0px 10vw !important;
+}
+
 @media (max-width: 988px){
   
   .inputBuscar{
